--- a/diamondAvalanche.css
+++ b/diamondAvalanche.css
@@ -68,9 +68,21 @@
     border: none;
 }
 
-.menu-board button img {
+.menu-board button img, #full-screen img {
     width: 100%;
     height: 100%;
+}
+
+#full-screen {
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    background-color: hsl(255, 76%, 30%);
+    border: none;
+    opacity: 0.7;
+    right: 0;
+    bottom: 0;
+    border-radius: 0;
 }
 
 #shuki {
@@ -86,21 +98,15 @@
 
 @keyframes shuki-go1 {
     0% { background-image: url('images/shuki1.png'); }
-    16.667% { background-image: url('images/shuki2.png'); }
-    33.333% { background-image: url('images/shuki3.png'); }
-    50% { background-image: url('images/shuki4.png'); }
-    66.667% { background-image: url('images/shuki5.png'); }
-    83.333% { background-image: url('images/shuki6.png'); }
-    100% { background-image: url('images/shuki7.png'); }
+    33.333% { background-image: url('images/shuki2.png'); }
+    66.667% { background-image: url('images/shuki3.png'); }
+    100% { background-image: url('images/shuki4.png'); }
 }
 
 @keyframes shuki-go2 {
-    0% { background-image: url('images/shuki7.png'); }
-    16.667% { background-image: url('images/shuki8.png'); }
-    33.333% { background-image: url('images/shuki9.png'); }
-    50% { background-image: url('images/shuki10.png'); }
-    66.667% { background-image: url('images/shuki11.png'); }
-    83.333% { background-image: url('images/shuki12.png'); }
+    0% { background-image: url('images/shuki4.png'); }
+    33.333% { background-image: url('images/shuki5.png'); }
+    66.667% { background-image: url('images/shuki6.png'); }
     100% { background-image: url('images/shuki1.png'); }
 }
 
