--- a/game1.css
+++ b/game1.css
@@ -5,7 +5,6 @@
   font-family: "sans-serif";
 }
 body {
-  display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
@@ -73,6 +72,7 @@ main p {
   transition: transform 0.3s linear;
   backface-visibility: hidden;
 }
+
 .card .back-view {
   transform: rotateY(-180deg);
 }
@@ -146,4 +146,40 @@ main p {
 .details button:hover {
   color: #fff;
   background: #6563ff;
+}
+#game-over {
+  text-align: center;
+  top: 25%;
+  left: calc((100% - 550px) / 2);
+  /* width: 60%; */
+  width: 550px;
+  padding: 10px;
+  background-color: rgba(89, 43, 226, 0.757);
+  font-size: 30px;
+  border-radius: 15px;
+  border: 5px rgba(89, 43, 226) outset;
+  position: absolute;
+  color: white;
+}
+.hide-message {
+  display: none;
+}
+#game-over button {
+  width: 90%;
+
+  margin-top: 10px;
+}
+button {
+  padding: 5px;
+  background-color: rgba(89, 43, 226);
+  color: white;
+  font-weight: bolder;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 5px;
+  border: 2px hsl(255, 76%, 30%) outset;
+}
+.flips_red {
+  color: red;
+  font-weight: bold;
 }
