--- a/game1.css
+++ b/game1.css
@@ -5,13 +5,14 @@
   font-family: "sans-serif";
 }
 body {
+  width: 100%;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   background: rgb(255, 255, 255);
 }
 main {
-  padding: 50px 6% 120px;
+  width: 100%;
 }
 
 h1 {
@@ -151,7 +152,6 @@ main p {
   text-align: center;
   top: 25%;
   left: calc((100% - 550px) / 2);
-  /* width: 60%; */
   width: 550px;
   padding: 10px;
   background-color: rgba(89, 43, 226, 0.757);
@@ -183,3 +183,34 @@ button {
   color: red;
   font-weight: bold;
 }
+@media only screen and (max-width: 500px) {
+  main {
+    padding: 0 0 0;
+  }
+  #game-over {
+    left: 0;
+    width: 100vw;
+    font-size: 20px;
+  }
+  .wrapper {
+    height: 80vw;
+    width: 100vw;
+    border-radius: 0px;
+    padding: 5px;
+  }
+  .card .back-view img {
+    max-width: 20px;
+  }
+  .card .front-view img {
+    max-width: 20px;
+  }
+  main p {
+    max-width: 80vw;
+  }
+  .details {
+    width: 100vw;
+    border-radius: 0;
+  }
+  .details p {
+    font-size: 14px;
+  }
