--- a/style.css
+++ b/style.css
@@ -8,9 +8,51 @@ main {
     padding: 50px 6% 120px;
 }
 
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    font-weight: bold;
+    background-color: midnightblue;
+    padding: 0 5px;
+    z-index: 10;
+}
+
 h1 {
     color: blueviolet;
     text-align: center;
+}
+
+header nav {
+    display: flex;
+    align-items: center;
+    min-height: 50px;
+}
+
+header nav div.left-nav {
+    margin-right: auto;
+    margin-left: 20px;
+}
+
+header nav div, header nav div a {
+    color: rgb(255, 255, 255, 0.8);
+}
+
+#logout {
+    display: none;
+}
+
+header nav div a.no-decoration {
+    text-decoration: none;
+}
+
+#home-link {
+    transition: color 0.5s, font-size 0.5s;
+}
+
+#home-link:hover {
+    color: white;
+    font-size: larger;
 }
 
 main p {
