--- a/main.css
+++ b/main.css
@@ -86,13 +86,99 @@ body {
 .games {
   position: relative;
   margin-top: 50vh;
+  /* לבדוק על זה!! */
+  flex-wrap: wrap;
   display: grid;
   padding: 50px;
   color: aliceblue;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-row-gap: 20px;
+  grid-column-gap: 20px;
 }
+.games .game {
+  position: relative;
+  height: 300px;
+  transition: 0.5s;
+  opacity: 0.9;
+}
+.games .game::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  left: 0;
+  background-image: linear-gradient(315deg, rgb(19, 221, 19), rgb(0, 217, 255));
+  /* filter: blur(30px); */
+}
+.games .game::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  left: 0;
+  background-image: linear-gradient(315deg, rgb(19, 221, 19), rgb(0, 217, 255));
+  filter: blur(10px);
+}
+.games .game:nth-child(3n + 1):after,
+.games .game:nth-child(3n + 1):before {
+  background-image: linear-gradient(45deg, rgb(221, 19, 157), rgb(255, 98, 0));
+}
+.games .game:nth-child(3n + 2):after,
+.games .game:nth-child(3n + 2):before {
+  background-image: linear-gradient(315deg, rgb(29, 19, 221), rgb(255, 0, 132));
+}
+.games .game b {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  /* set the distance to the parent */
+  inset: 6px;
+}
+.games .game img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  z-index: 3;
+  scale: 0.8;
+  object-fit: cover;
+  opacity: 0.25;
+  transition: 0.5s;
+}
+.games .game:hover img {
+  scale: 0.6;
+  opacity: 0.9;
+  transform: translateY(-20%);
+}
+.games .game .content {
+  position: absolute;
+  width: 100%;
+  z-index: 3;
+  bottom: 0%;
+  left: 0%;
+  transform: scale(0);
+  transition: 0.5s;
+}
+.games .game:hover .content {
+  transform: scale(1);
+  bottom: 10%;
+}
+.games .lock {
+  background-image: url(https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg);
 
+  z-index: 1;
+}
 @media only screen and (max-width: 800px) {
-  .bubbles span:nth-child(3n + 0) {
+  .bubbles span:nth-c2ild(3n + 0) {
     display: none;
+  }
+  .games {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .games .game {
+    height: 220px;
   }
 }
