--- a/main.css
+++ b/main.css
@@ -90,18 +90,20 @@ body {
   flex-wrap: wrap;
   display: grid;
   padding: 50px;
-  color: aliceblue;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-row-gap: 20px;
   grid-column-gap: 20px;
 }
 .games .game {
+  color: aliceblue;
   position: relative;
   height: 300px;
   transition: 0.5s;
-  opacity: 0.9;
+  background-image: linear-gradient(315deg, rgb(19, 221, 19), rgb(0, 217, 255));
+  /* filter: blur(10px); */
 }
-.games .game::before {
+
+/* .games .game::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -109,7 +111,7 @@ body {
   top: 0%;
   left: 0;
   background-image: linear-gradient(315deg, rgb(19, 221, 19), rgb(0, 217, 255));
-  /* filter: blur(30px); */
+
 }
 .games .game::after {
   content: "";
@@ -120,18 +122,17 @@ body {
   left: 0;
   background-image: linear-gradient(315deg, rgb(19, 221, 19), rgb(0, 217, 255));
   filter: blur(10px);
-}
-.games .game:nth-child(3n + 1):after,
-.games .game:nth-child(3n + 1):before {
+}*/
+.games .game:nth-child(3n + 1) {
   background-image: linear-gradient(45deg, rgb(221, 19, 157), rgb(255, 98, 0));
 }
-.games .game:nth-child(3n + 2):after,
-.games .game:nth-child(3n + 2):before {
+.games .game:nth-child(3n + 2) {
   background-image: linear-gradient(315deg, rgb(29, 19, 221), rgb(255, 0, 132));
 }
 .games .game b {
   position: absolute;
   background: rgba(0, 0, 0, 0.6);
+
   z-index: 2;
   /* set the distance to the parent */
   inset: 6px;
@@ -145,7 +146,7 @@ body {
   z-index: 3;
   scale: 0.8;
   object-fit: cover;
-  opacity: 0.25;
+  opacity: 0.5;
   transition: 0.5s;
 }
 .games .game:hover img {
@@ -153,6 +154,19 @@ body {
   opacity: 0.9;
   transform: translateY(-20%);
 }
+/* for unready/unopened games */
+.games .game .locked {
+  opacity: 0;
+}
+.games .game:hover .locked {
+  opacity: 0.8;
+  background: transparent;
+}
+.games .game:nth-child(1) .locked,
+.games .game:nth-child(2) .locked {
+  display: none;
+}
+
 .games .game .content {
   position: absolute;
   width: 100%;
@@ -166,19 +180,18 @@ body {
   transform: scale(1);
   bottom: 10%;
 }
-.games .lock {
-  background-image: url(https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg);
 
-  z-index: 1;
-}
 @media only screen and (max-width: 800px) {
   .bubbles span:nth-c2ild(3n + 0) {
     display: none;
+  }
+  .title {
+    font-size: 3em;
   }
   .games {
     grid-template-columns: 1fr 1fr 1fr;
   }
   .games .game {
-    height: 220px;
+    height: 200px;
   }
 }
