--- a/CSS/main.css
+++ b/CSS/main.css
@@ -104,26 +104,6 @@ body {
   /* filter: blur(10px); */
 }
 
-/* .games .game::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0%;
-  left: 0;
-  background-image: linear-gradient(315deg, rgb(19, 221, 19), rgb(0, 217, 255));
-
-}
-.games .game::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0%;
-  left: 0;
-  background-image: linear-gradient(315deg, rgb(19, 221, 19), rgb(0, 217, 255));
-  filter: blur(10px);
-}*/
 .games .game:nth-child(3n + 1) {
   background-image: linear-gradient(45deg, rgb(221, 19, 157), rgb(255, 98, 0));
 }
@@ -181,7 +161,37 @@ body {
   transform: scale(1);
   bottom: 10%;
 }
+#game-over {
+  text-align: center;
+  top: 25%;
+  left: calc((100% - 550px) / 2);
+  width: 550px;
+  padding: 10px;
+  background-color: rgba(89, 43, 226, 0.9);
+  font-size: 30px;
+  border-radius: 15px;
+  border: 5px rgb(255, 0, 0) outset;
+  position: fixed;
+  color: white;
+  z-index: 20;
+}
+.hide-message {
+  display: none;
+}
 
+#game-over a {
+  width: 90%;
+
+  margin-top: 10px;
+  padding: 5px 50px;
+  background-color: rgba(89, 43, 226);
+  color: white;
+  font-weight: bolder;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 5px;
+  border: 2px hsl(255, 76%, 30%) outset;
+}
 @media only screen and (max-width: 800px) {
   .bubbles span:nth-c2ild(3n + 0) {
     display: none;
